# watch-price-prediction

./: .gitignore  1_Data_Preperation.ipynb  1_Einleitung.ipynb  1_Introduction.ipynb  M1_RandomForest.ipynb  M1_RandomForest_ds3.ipynb  M2_simpleNN.ipynb  M2_simpleNN_ds3.ipynb  M3_resnet.ipynb  M3_resnet_ds3.ipynb  README.md  WatchBrandPrediction.ipynb  crop_image.py  pyproject.toml  shopify_scraper.py  test2_M3_ds3.ipynb  test_M3_ds3.ipynb
.ipynb_checkpoints/: 1_Data_Preperation-checkpoint.ipynb  1_Einleitung-checkpoint.ipynb  1_Introduction-checkpoint.ipynb  M1_RandomForest-checkpoint.ipynb  M1_RandomForest_ds3-checkpoint.ipynb  M2_simpleNN-checkpoint.ipynb  M3_resnet-checkpoint.ipynb  M3_resnet_ds3-checkpoint.ipynb  test2_M3_ds3-checkpoint.ipynb  test_M3_ds3-checkpoint.ipynb
data/metadata/: marc_products.csv
data/watches/ds1_kaggle/: cleandata.csv  example_cleandata.csv
data/watches/ds2_marc/: cleandata.csv  example_cleandata.csv
data/watches/ds3_crown/: cleandata.csv  example_cleandata.csv
